trying to fix topnav positionig on iphone

--- a/itv/css/style.css
+++ b/itv/css/style.css
@@ -297,25 +297,47 @@ a {
 }
 
 .header-topnav-container {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   width: 100%;
   position: relative;
   height: 42px;
   padding: 0;
 }
 
+.header-topnav-btnwrapper {
+  position: relative;
+  justify-self: flex-start;
+  height: 100%;
+  width: 35px;
+  display: inline-block;
+  margin-left: 2.5rem;
+}
+
 .header-topnav-btn {
   position: absolute;
-  background: none;
-  border: none;
-  color: white;
-  font-size: 1.5rem;
   height: 100%;
-  aspect-ratio: 1/1;
+  width: 100%;
   padding: 0;
   margin: 0;
+  font-size: 1.5rem;
+  color: white;
+  background: none;
+  border: none;
   cursor: pointer;
-  left: 1.5rem;
   -webkit-transform-origin: 55% 55%;
           transform-origin: 55% 55%;
   -webkit-transition: -webkit-transform 0.5s;
@@ -381,9 +403,6 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -427,9 +446,8 @@ a {
 }
 
 @media (min-width: calc(425px + 1px)) {
-  .header-topnav-btn {
-    display: none;
-  }
+  .header-topnav-btn,
+  .header-topnav-btnwrapper,
   .header-topnav-socials {
     display: none;
   }
