--- a/itv/scss/layout/_header-topnav.scss
+++ b/itv/scss/layout/_header-topnav.scss
@@ -4,26 +4,39 @@
 }
 
 .header-topnav-container {
-  display: block;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
   width: 100%;
   position: relative;
   height: 42px;
   padding: 0;
 }
 
+.header-topnav-btnwrapper {
+  position: relative;
+  justify-self: flex-start;
+  height: 100%;
+  width: 35px;
+  display: inline-block;
+  margin-left: $topnav-items-margin;
+}
+
 .header-topnav-btn {
   position: absolute;
-  background: none;
-  border: none;
-  color: white;
-  // font-weight: 900;
-  font-size: 1.5rem;
   height: 100%;
-  aspect-ratio: 1/1;
+  width: 100%;
+
   padding: 0;
   margin: 0;
+  
+  font-size: 1.5rem;
+  color: white;
+  background: none;
+  border: none;
   cursor: pointer;
-  left: 1.5rem;
 
   transform-origin: 55% 55%;
   transition: transform 0.5s;
@@ -81,9 +94,10 @@
   font-size: 2rem;
   height: 100%;
   display: flex;
-  justify-content: end;
   align-items: center;
   margin-right: $topnav-items-margin;
+
+  // background-color: plum;
 }
 
 .header-topnav-live {
@@ -127,10 +141,8 @@
 
 @media (min-width: $xsm-max-size) {
   // container-width: 95%
-  .header-topnav-btn {
-    display: none;
-  }
-
+  .header-topnav-btn,
+  .header-topnav-btnwrapper,
   .header-topnav-socials {
     display: none;
   }
